# Sentinelioc

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
examples/: sample_iocs.csv  sample_iocs.json
src/sentinelioc/: cli.py  database.py  hashing.py  importer.py  matcher.py  models.py  paths.py  persistence.py  reporter.py  scanner.py
src/sentinelioc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_database.py  test_hashing.py  test_importer.py  test_matcher.py
